中文翻译：列车状态、音效、一些成就和进度
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: baka-gourd <baka-gourd@users.noreply.github.com>
Co-authored-by: MacrousHyucen <MacrousHyucen@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -684,11 +684,11 @@
 	"advancement.create.compacting.desc": "使用动力辊压机与工作盆将多个物品压缩成一个",
 	"advancement.create.belt": "海带传动",
 	"advancement.create.belt.desc": "用传送带连接两个传动杆",
-	"advancement.create.funnel": "UNLOCALIZED: Airport Aesthetic",
-	"advancement.create.funnel.desc": "UNLOCALIZED: Extract or insert items into a container using a Funnel",
+	"advancement.create.funnel": "UNLOCALIZED: Airport Aesthetic（机场美学？）",
+	"advancement.create.funnel.desc": "用漏斗从容器输出或输入物品",
 	"advancement.create.chute": "轰然倒塌",
 	"advancement.create.chute.desc": "放置一个溜槽（垂直版本的传送带）",
-	"advancement.create.mechanical_mixer": "UNLOCALIZED: Mixing it up",
+	"advancement.create.mechanical_mixer": "混合搅拌",
 	"advancement.create.mechanical_mixer.desc": "UNLOCALIZED: Combine ingredients in a Mechanical Mixer",
 	"advancement.create.burner": "活炉",
 	"advancement.create.burner.desc": "获得烈焰人燃烧室",
@@ -704,8 +704,8 @@
 	"advancement.create.super_glue.desc": "使用强力胶将多个方块连为一体",
 	"advancement.create.contraption_actors": "UNLOCALIZED: Moving with Purpose",
 	"advancement.create.contraption_actors.desc": "UNLOCALIZED: Create a contraption with drills, saws or harvesters on board",
-	"advancement.create.portable_storage_interface": "UNLOCALIZED: Drive-by exchange",
-	"advancement.create.portable_storage_interface.desc": "UNLOCALIZED: Use a Portable Storage Interface to take or insert items into a contraption",
+	"advancement.create.portable_storage_interface": "顺道交换",
+	"advancement.create.portable_storage_interface.desc": "用移动式储存接口从移动装置中取出或输入物品",
 	"advancement.create.wrench_goggles": "一应俱全",
 	"advancement.create.wrench_goggles.desc": "同时装备工程师护目镜与扳手",
 	"advancement.create.stressometer": "精密的应力控制",
@@ -716,9 +716,9 @@
 	"advancement.create.windmill_maxed.desc": "组装一个最高级的风车",
 	"advancement.create.ejector_maxed": "跳板冠军",
 	"advancement.create.ejector_maxed.desc": "被弹射置物台弹飞30格以外",
-	"advancement.create.pulley_maxed": "UNLOCALIZED: Rope to Nowhere",
+	"advancement.create.pulley_maxed": "绳索遍地",
 	"advancement.create.pulley_maxed.desc": "使用绳索滑轮伸出超过200格长的绳索",
-	"advancement.create.cart_pickup": "UNLOCALIZED: Strong Arms",
+	"advancement.create.cart_pickup": "大力士",
 	"advancement.create.cart_pickup.desc": "捡起一个至少带有200个方块的矿车结构",
 	"advancement.create.anvil_plough": "锻匠大炮",
 	"advancement.create.anvil_plough.desc": "用动力犁发射铁砧",
@@ -739,7 +739,7 @@
 	"advancement.create.drain": "滚筒排液",
 	"advancement.create.drain.desc": "目睹物品被分液池排空",
 	"advancement.create.steam_engine": "发电站",
-	"advancement.create.steam_engine.desc": "UNLOCALIZED: 用蒸汽引擎产生动力（扭矩？）",
+	"advancement.create.steam_engine.desc": "UNLOCALIZED: 用蒸汽引擎产生动力（原文是torque，扭矩？）",
 	"advancement.create.steam_whistle": "天籁之音",
 	"advancement.create.steam_whistle.desc": "激活一个蒸汽笛",
 	"advancement.create.backtank": "UNLOCALIZED: Pressure to Go",
@@ -768,7 +768,7 @@
 	"advancement.create.diving_suit_lava.desc": "努力尝试用潜水装备在熔岩中潜水§7\n（隐藏进度）",
 	"advancement.create.chained_drain": "翻滚吧！",
 	"advancement.create.chained_drain.desc": "目睹一个物品滚过一串分液池§7\n（隐藏进度）",
-	"advancement.create.cross_streams": "UNLOCALIZED: Don't cross the Streams!",
+	"advancement.create.cross_streams": "不要渡河!",
 	"advancement.create.cross_streams.desc": "目睹两种流体在你的管道网络中相交§7\n（隐藏进度）",
 	"advancement.create.pipe_organ": "管风琴",
 	"advancement.create.pipe_organ.desc": "在一个流体储罐上安装12个不同音调的蒸汽笛§7\n（隐藏进度）",
@@ -790,7 +790,7 @@
 	"advancement.create.mechanical_crafter.desc": "放置一些动力合成器并为其供能",
 	"advancement.create.crushing_wheel": "一对大家伙",
 	"advancement.create.crushing_wheel.desc": "制作一些能更快粉碎物品的粉碎轮",
-	"advancement.create.haunted_bell": "UNLOCALIZED: Shadow Sense",
+	"advancement.create.haunted_bell": "黑暗感官",
 	"advancement.create.haunted_bell.desc": "敲响一个缠魂钟",
 	"advancement.create.clockwork_bearing": "巧械时钟",
 	"advancement.create.clockwork_bearing.desc": "组装安装在发条轴承上的装置",
@@ -815,7 +815,7 @@
 	"advancement.create.fist_bump": "来碰个拳，哥们~",
 	"advancement.create.fist_bump.desc": "使两个机械手互相碰拳",
 	"advancement.create.crafter_lazy_000": "权宜之计",
-	"advancement.create.crafter_lazy_000.desc": "UNLOCALIZED: Drastically slow down a Mechanical Crafter to procrastinate on proper infrastructure§7\n(Hidden Advancement)",
+	"advancement.create.crafter_lazy_000.desc": "UNLOCALIZED: 大幅度减慢动力合成器来延迟基本建设Drastically slow down a Mechanical Crafter to procrastinate on proper infrastructure§7\n(Hidden Advancement)",
 	"advancement.create.extendo_grip_dual": "UNLOCALIZED: To full Extent",
 	"advancement.create.extendo_grip_dual.desc": "用双重伸缩机械手获得超人般的触及距离§7\n（隐藏进度）",
 	"advancement.create.musical_arm": "没人能在我的 BGM 里打败我！",
@@ -824,17 +824,17 @@
 	"advancement.create.sturdy_sheet.desc": "用精炼粉碎黑曜石装配坚固薄板",
 	"advancement.create.train_casing_00": "运输时代",
 	"advancement.create.train_casing_00.desc": "用坚固薄板制作列车组件的机壳",
-	"advancement.create.train": "UNLOCALIZED: All Aboard!",
+	"advancement.create.train": "各位请上车!",
 	"advancement.create.train.desc": "装配你的第一辆列车",
 	"advancement.create.conductor": "指挥者的指挥者",
-	"advancement.create.conductor.desc": "UNLOCALIZED: 用Schedule指挥Train driver",
+	"advancement.create.conductor.desc": "使用列车时刻表指挥列车司机",
 	"advancement.create.track_signal": "交通控制",
 	"advancement.create.track_signal.desc": "放置一个列车信号机",
 	"advancement.create.display_board_0": "动态时间表",
 	"advancement.create.display_board_0.desc": "利用显示链接器，在显示板上预报列车入站时间",
 	"advancement.create.track_0": "新尺度",
 	"advancement.create.track_0.desc": "获得一些列车轨道",
-	"advancement.create.train_whistle": "Choo choo!",
+	"advancement.create.train_whistle": "呜！呜!",
 	"advancement.create.train_whistle.desc": "在你的火车上安装一个蒸汽笛并在驾驶时激活它",
 	"advancement.create.train_portal": "超维度列车",
 	"advancement.create.train_portal.desc": "成列车穿越下界传送门",
@@ -842,7 +842,7 @@
 	"advancement.create.track_crafting_factory.desc": "用同一个动力辊压机制造1000个列车轨道",
 	"advancement.create.long_bend": "最长弯道",
 	"advancement.create.long_bend.desc": "建造一条长度超过30格的列车轨道",
-	"advancement.create.long_train": "UNLOCALIZED: Ambitious Endeavours",
+	"advancement.create.long_train": "雄心勃勃",
 	"advancement.create.long_train.desc": "建造至少带有六个车厢的列车",
 	"advancement.create.long_travel": "异地考察",
 	"advancement.create.long_travel.desc": "在距离起点5000格外的地方离开列车座位",
@@ -852,7 +852,7 @@
 	"advancement.create.red_signal.desc": "驾驶火车闯红灯§7\n（隐藏进度）",
 	"advancement.create.train_crash": "劣质服务",
 	"advancement.create.train_crash.desc": "目睹自己乘坐的火车遭到撞击§7\n（隐藏进度）",
-	"advancement.create.train_crash_backwards": "盲点",
+	"advancement.create.train_crash_backwards": "盲区",
 	"advancement.create.train_crash_backwards.desc": "在倒车时与另一辆列车相撞",
 
 
@@ -875,7 +875,7 @@
 	"death.attack.create.potato_cannon.item": "%1$s被%2$s用%3$s射死了",
 	"death.attack.create.cuckoo_clock_explosion": "%1$s被布谷鸟闹钟炸得粉身碎骨",
 	"death.attack.create.cuckoo_clock_explosion.player": "%1$s被布谷鸟闹钟炸得粉身碎骨",
-	"death.attack.create.run_over": "%1$s被%2$s碾了过去",
+	"death.attack.create.run_over": "%1$s的脸被%2$s的车轮压扁了",
 
 	"create.block.deployer.damage_source_name": "二五仔机械手",
 	"create.block.cart_assembler.invalid": "请将矿车装配器放置在铁轨上",
@@ -1581,47 +1581,47 @@
 	"create.train_assembly.bogey_created": "转向架已创建，再次点击来循环修改类型",
 	"create.train_assembly.requires_casing": "在轨道上使用列车机壳来创建转向架",
 
-	"create.track_target.set": "UNLOCALIZED: Targeted track selected",
-	"create.track_target.success": "UNLOCALIZED: Successfully bound to targeted track",
-	"create.track_target.clear": "UNLOCALIZED: Cleared track selection",
-	"create.track_target.missing": "UNLOCALIZED: Right-click the targeted train track first",
-	"create.track_target.too_far": "UNLOCALIZED: Targeted track is too far from here",
-	"create.track_target.no_junctions": "UNLOCALIZED: Targeted track cannot be an intersection",
-	"create.track_target.occupied": "UNLOCALIZED: Targeted track is occupied",
-	"create.track_target.invalid": "UNLOCALIZED: Cannot target this track here",
+	"create.track_target.set": "目标轨道已选择",
+	"create.track_target.success": "成功绑定到目标轨道",
+	"create.track_target.clear": "已清除选择的轨道",
+	"create.track_target.missing": "先右击目标列车轨道",
+	"create.track_target.too_far": "目标轨道离此处太远",
+	"create.track_target.no_junctions": "目标轨道不能是交叉口",
+	"create.track_target.occupied": "目标轨道被占用",
+	"create.track_target.invalid": "无法在此处指定目标轨道UNLOCALIZED: Cannot target this track here",
 
-	"create.train.unnamed": "UNLOCALIZED: Unnamed Train",
-	"create.train.cannot_relocate_moving": "UNLOCALIZED: Cannot relocate a moving Train",
-	"create.train.relocate": "UNLOCALIZED: Click a Track to Relocate %1$s to. Sneak-Click to abort",
-	"create.train.relocate.abort": "UNLOCALIZED: Relocation aborted",
-	"create.train.relocate.success": "UNLOCALIZED: Relocation successful",
-	"create.train.relocate.valid": "UNLOCALIZED: Can relocate to here, Click to Confirm",
-	"create.train.relocate.invalid": "UNLOCALIZED: Cannot relocate Train to here",
-	"create.train.relocate.too_far": "UNLOCALIZED: Cannot relocate Train this far away",
-	"create.train.departing_from": "UNLOCALIZED: Departing from %1$s",
-	"create.train.arrived_at": "UNLOCALIZED: Arrived at %1$s",
-	"create.train.status": "UNLOCALIZED: <i> Information about Train: %1$s",
-	"create.train.status.back_on_track": "UNLOCALIZED: Train is back on Track",
-	"create.train.status.collision": "UNLOCALIZED: Collision with other Train",
-	"create.train.status.end_of_track": "UNLOCALIZED: A Carriage has reached the end of its Track",
-	"create.train.status.double_portal": "UNLOCALIZED: A Carriage cannot enter a portal whilst leaving another",
-	"create.train.status.coupling_stress": "UNLOCALIZED: Forced stop due to Stress on Couplings",
-	"create.train.status.track_missing": "UNLOCALIZED: Tracks are missing beneath the Train",
-	"create.train.status.paused_for_manual": "UNLOCALIZED: Schedule paused for manual controls",
-	"create.train.status.opposite_driver": "UNLOCALIZED: Path requires a driver facing the opposite direction",
-	"create.train.status.missing_driver": "UNLOCALIZED: Driver has gone missing",
-	"create.train.status.found_driver": "UNLOCALIZED: A new driver has been found",
-	"create.train.status.navigation_success": "UNLOCALIZED: Navigation succeeded",
-	"create.train.status.no_match": "UNLOCALIZED: No station on graph matches '%1$s'",
-	"create.train.status.no_path": "UNLOCALIZED: No suitable path to the next Scheduled destination could be found",
+	"create.train.unnamed": "未命名列车",
+	"create.train.cannot_relocate_moving": "无法重新安置移动中的列车",
+	"create.train.relocate": "点击一个轨道来重新安置%1$s，潜行点击取消",
+	"create.train.relocate.abort": "重新安置被取消",
+	"create.train.relocate.success": "重新安置成功",
+	"create.train.relocate.valid": "可以重新安置到此处，点击确认",
+	"create.train.relocate.invalid": "无法重新安置列车到此处",
+	"create.train.relocate.too_far": "无法重新安置列车到过远处",
+	"create.train.departing_from": "发自%1$s",
+	"create.train.arrived_at": "到达%1$s",
+	"create.train.status": "<i> 关于列车的信息：%1$s",
+	"create.train.status.back_on_track": "列车回到了轨道上",
+	"create.train.status.collision": "和其他列车相撞",
+	"create.train.status.end_of_track": "一节车厢已到达轨道末端",
+	"create.train.status.double_portal": "一节车厢不能在离开传送门的同时进入另一个传送门",
+	"create.train.status.coupling_stress": "由于连轴器的压力强制停止",
+	"create.train.status.track_missing": "列车下方缺少轨道",
+	"create.train.status.paused_for_manual": "时刻表被暂停以进行手动控制",
+	"create.train.status.opposite_driver": "路线要求驾驶员面向相反方向",
+	"create.train.status.missing_driver": "驾驶员不知所踪",
+	"create.train.status.found_driver": "找到一个新的驾驶员",
+	"create.train.status.navigation_success": "导航成功",
+	"create.train.status.no_match": "在图表上没有匹配'%1$s'的车站",
+	"create.train.status.no_path": "找不到前往下一个目的地合适路线",
 
-	"create.track_signal.cannot_change_mode": "UNLOCALIZED: Unable to switch mode of this Signal",
-	"create.track_signal.mode_change.entry_signal": "UNLOCALIZED: -> Allow passage if section unoccupied",
-	"create.track_signal.mode_change.cross_signal": "UNLOCALIZED: -> Allow passage if section fully traversable",
+	"create.track_signal.cannot_change_mode": "无法切换该信号的模式",
+	"create.track_signal.mode_change.entry_signal": "-> 如果区间未闭塞则允许通行",
+	"create.track_signal.mode_change.cross_signal": "-> 如果区间可穿过则允许通行",
 
-	"create.contraption.controls.start_controlling": "UNLOCALIZED: Now controlling: %1$s",
-	"create.contraption.controls.stop_controlling": "UNLOCALIZED: Stopped controlling contraption",
-	"create.contraption.controls.approach_station": "UNLOCALIZED: Hold %1$s to approach %2$s",
+	"create.contraption.controls.start_controlling": "现在控制：%1$s",
+	"create.contraption.controls.stop_controlling": "停止控制装置",
+	"create.contraption.controls.approach_station": "按住%1$s以接近%2$s",
 
 	"create.display_link.set": "已选择目标位置",
 	"create.display_link.success": "成功绑定到目标位置",
@@ -1748,17 +1748,17 @@
 	"create.subtitle.contraption_disassemble": "结构：停止移动",
 	"create.subtitle.peculiar_bell_use": "奇异钟：鸣响",
 	"create.subtitle.worldshaper_place": "环境塑型器：放置方块",
-	"create.subtitle.whistle_train_manual": "UNLOCALIZED: Train honks",
-	"create.subtitle.steam": "UNLOCALIZED: Steam noises",
+	"create.subtitle.whistle_train_manual": "列车：鸣笛",
+	"create.subtitle.steam": "蒸汽噪音",
 	"create.subtitle.saw_activate_stone": "动力锯：切割",
 	"create.subtitle.schematicannon_finish": "蓝图加农炮：叮",
 	"create.subtitle.crafter_craft": "动力合成器：合成中",
 	"create.subtitle.wrench_remove": "组件：被破坏",
 	"create.subtitle.train3": "UNLOCALIZED: Bogey wheels rumble muffled",
-	"create.subtitle.whistle": "UNLOCALIZED: Whistling",
+	"create.subtitle.whistle": "蒸汽笛：鸣笛",
 	"create.subtitle.cogs": "齿轮：嘎吱作响",
 	"create.subtitle.slime_added": "黏液：压扁",
-	"create.subtitle.whistle_train_low": "UNLOCALIZED: Low whistling",
+	"create.subtitle.whistle_train_low": "蒸汽笛：低鸣",
 	"create.subtitle.schematicannon_launch_block": "蓝图加农炮：发射",
 	"create.subtitle.controller_take": "讲台：取走物品",
 	"create.subtitle.crafter_click": "动力合成器：咔哒声",
@@ -1780,7 +1780,7 @@
 	"create.subtitle.wrench_rotate": "扳手：拧动",
 	"create.subtitle.potato_hit": "土豆：击中",
 	"create.subtitle.saw_activate_wood": "动力锯：切割",
-	"create.subtitle.whistle_high": "UNLOCALIZED: High whistling",
+	"create.subtitle.whistle_high": "蒸汽笛：尖鸣",
 	"create.subtitle.whistle_train_manual_low": "UNLOCALIZED: Train honks",
 	"create.subtitle.whistle_train": "UNLOCALIZED: Whistling",
 	"create.subtitle.haunted_bell_convert": "奇异钟：转化",
@@ -2894,7 +2894,7 @@
 
 	"create.ponder.track_placement.header": "放置列车轨道",
 	"create.ponder.track_placement.text_1": "一种专为列车装置设计的新型轨道",
-	"create.ponder.track_placement.text_2": "要批量放置多行轨道，单击现有轨道",
+	"create.ponder.track_placement.text_2": "要批量放置多排轨道，单击现有轨道",
 	"create.ponder.track_placement.text_3": "然后选择或放置第二个轨道",
 	"create.ponder.track_placement.text_4": "轨道也可以放置为转弯或斜坡",
 	"create.ponder.track_placement.text_5": "连接时，轨道将尝试使每个转弯的大小相等",
