中文翻译：思索——玫瑰石英灯、飞轮（R.I.P）
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: baka-gourd <baka-gourd@users.noreply.github.com>
Co-authored-by: MacrousHyucen <MacrousHyucen@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -679,7 +679,7 @@
 	"advancement.create.fan_processing": "粒子化加工",
 	"advancement.create.fan_processing.desc": "使用鼓风机去加工材料",
 	"advancement.create.saw_processing": "车间中的危险机械",
-	"advancement.create.saw_processing.desc": "使用动力锯去加工材料",
+	"advancement.create.saw_processing.desc": "使用动力锯来加工材料",
 	"advancement.create.compacting": "紧致化",
 	"advancement.create.compacting.desc": "使用动力辊压机与工作盆将多个物品压缩成一个",
 	"advancement.create.belt": "海带传动",
@@ -689,7 +689,7 @@
 	"advancement.create.chute": "轰然倒塌",
 	"advancement.create.chute.desc": "放置一个溜槽（垂直版本的传送带）",
 	"advancement.create.mechanical_mixer": "混合搅拌",
-	"advancement.create.mechanical_mixer.desc": "UNLOCALIZED: Combine ingredients in a Mechanical Mixer",
+	"advancement.create.mechanical_mixer.desc": "用动力搅拌器混合材料",
 	"advancement.create.burner": "活炉",
 	"advancement.create.burner.desc": "获得烈焰人燃烧室",
 	"advancement.create.water_wheel": "掌控水流",
@@ -702,8 +702,8 @@
 	"advancement.create.millstone.desc": "放置一个石磨并且为其供能",
 	"advancement.create.super_glue": "衔接地带",
 	"advancement.create.super_glue.desc": "使用强力胶将多个方块连为一体",
-	"advancement.create.contraption_actors": "UNLOCALIZED: Moving with Purpose",
-	"advancement.create.contraption_actors.desc": "UNLOCALIZED: Create a contraption with drills, saws or harvesters on board",
+	"advancement.create.contraption_actors": "有目的地行动",
+	"advancement.create.contraption_actors.desc": "创建一个带有动力钻头、动力锯或者动力收割机的移动装置",
 	"advancement.create.portable_storage_interface": "顺道交换",
 	"advancement.create.portable_storage_interface.desc": "用移动式储存接口从移动装置中取出或输入物品",
 	"advancement.create.wrench_goggles": "一应俱全",
@@ -729,7 +729,7 @@
 	"advancement.create.belt_funnel_kiss": "鹦鹉和垂翼",
 	"advancement.create.belt_funnel_kiss.desc": "让两个安装在传送带上的漏斗深情相吻",
 	"advancement.create.stressometer_maxed": "UNLOCALIZED: Perfectly Stressed",
-	"advancement.create.stressometer_maxed.desc": "UNLOCALIZED: Get a 100% readout from a Stressometer§7\n(Hidden Advancement)",
+	"advancement.create.stressometer_maxed.desc": "在应力表中得到100%的读数§7\n（隐藏进度）",
 	"advancement.create.copper": "UNLOCALIZED: More Sturdier Rocks",
 	"advancement.create.copper.desc": "UNLOCALIZED: Amass some Copper for your exploits in Fluid Manipulation",
 	"advancement.create.copper_casing": "铜器时代",
@@ -743,7 +743,7 @@
 	"advancement.create.steam_whistle": "天籁之音",
 	"advancement.create.steam_whistle.desc": "激活一个蒸汽笛",
 	"advancement.create.backtank": "UNLOCALIZED: Pressure to Go",
-	"advancement.create.backtank.desc": "UNLOCALIZED: Create a copper backtank and make it accumulate Air Pressure",
+	"advancement.create.backtank.desc": "制作一个铜制背罐并对其积累气压",
 	"advancement.create.diving_suit": "准备深潜",
 	"advancement.create.diving_suit.desc": "装备潜水头盔和铜制背罐，然后跳进水里",
 	"advancement.create.mechanical_pump_0": "面临压力",
@@ -1754,11 +1754,11 @@
 	"create.subtitle.schematicannon_finish": "蓝图加农炮：叮",
 	"create.subtitle.crafter_craft": "动力合成器：合成中",
 	"create.subtitle.wrench_remove": "组件：被破坏",
-	"create.subtitle.train3": "UNLOCALIZED: Bogey wheels rumble muffled",
+	"create.subtitle.train3": "火车：移动",
 	"create.subtitle.whistle": "蒸汽笛：鸣笛",
 	"create.subtitle.cogs": "齿轮：嘎吱作响",
 	"create.subtitle.slime_added": "黏液：压扁",
-	"create.subtitle.whistle_train_low": "蒸汽笛：低鸣",
+	"create.subtitle.whistle_train_low": "火车：鸣笛",
 	"create.subtitle.schematicannon_launch_block": "蓝图加农炮：发射",
 	"create.subtitle.controller_take": "讲台：取走物品",
 	"create.subtitle.crafter_click": "动力合成器：咔哒声",
@@ -1781,13 +1781,13 @@
 	"create.subtitle.potato_hit": "土豆：击中",
 	"create.subtitle.saw_activate_wood": "动力锯：切割",
 	"create.subtitle.whistle_high": "蒸汽笛：尖鸣",
-	"create.subtitle.whistle_train_manual_low": "UNLOCALIZED: Train honks",
-	"create.subtitle.whistle_train": "UNLOCALIZED: Whistling",
+	"create.subtitle.whistle_train_manual_low": "火车：鸣笛",
+	"create.subtitle.whistle_train": "火车：鸣笛",
 	"create.subtitle.haunted_bell_convert": "奇异钟：转化",
-	"create.subtitle.train": "UNLOCALIZED: Bogey wheels rumble",
+	"create.subtitle.train": "火车：移动",
 	"create.subtitle.deny": "提示声：出错",
 	"create.subtitle.controller_click": "遥控器：按下按钮",
-	"create.subtitle.whistle_low": "UNLOCALIZED: Low whistling",
+	"create.subtitle.whistle_low": "蒸汽笛：低鸣",
 	"create.subtitle.copper_armor_equip": "潜水装备：铿锵",
 	"create.subtitle.mechanical_press_activation": "辊压机：工作中",
 	"create.subtitle.contraption_assemble": "结构：开始移动",
@@ -2015,10 +2015,10 @@
 	"block.create.placard.tooltip.condition2": "UNLOCALIZED: When Punched",
 	"block.create.placard.tooltip.behaviour2": "UNLOCALIZED: _Removes_ the current _item_ in the frame.",
 
-	"block.create.flywheel.tooltip": "UNLOCALIZED: FLYWHEEL",
-	"block.create.flywheel.tooltip.summary": "UNLOCALIZED: _Embellish_ your _Machines_ with this imposing Wheel of Brass.",
-	"block.create.flywheel.tooltip.condition1": "UNLOCALIZED: When Powered by Kinetics",
-	"block.create.flywheel.tooltip.behaviour1": "UNLOCALIZED: Starts spinning.",
+	"block.create.flywheel.tooltip": "飞轮",
+	"block.create.flywheel.tooltip.summary": "用壮观的黄铜轮子_装饰_你的_机器_。",
+	"block.create.flywheel.tooltip.condition1": "接入动力时",
+	"block.create.flywheel.tooltip.behaviour1": "开始旋转",
 
 	"item.create.diving_boots.tooltip": "潜水靴",
 	"item.create.diving_boots.tooltip.summary": "一双_沉重的靴子_，让穿戴者可以更方便的探索海底。",
@@ -2772,13 +2772,13 @@
 	"create.ponder.rope_pulley_modes.text_1": "当绳索滑轮停止运动时，它所附着的移动结构便会方块化",
 	"create.ponder.rope_pulley_modes.text_2": "你可以调整使整个结构永不方块化，或者仅在结构的初始位置方块化",
 
-	"create.ponder.rose_quartz_lamp.header": "UNLOCALIZED: Rose Quartz Lamps",
-	"create.ponder.rose_quartz_lamp.text_1": "UNLOCALIZED: Rose Quartz Lamps activate on a Redstone signal",
-	"create.ponder.rose_quartz_lamp.text_2": "UNLOCALIZED: They will continue to emit redstone power afterwards",
-	"create.ponder.rose_quartz_lamp.text_3": "UNLOCALIZED: When multiple lamps are arranged in a group...",
-	"create.ponder.rose_quartz_lamp.text_4": "UNLOCALIZED: ...activating a Lamp will focus the signal to it, deactivating all others",
-	"create.ponder.rose_quartz_lamp.text_5": "UNLOCALIZED: Comparators output based on the distance to a powered lamp",
-	"create.ponder.rose_quartz_lamp.text_6": "UNLOCALIZED: The Lamps can also be toggled manually using a Wrench",
+	"create.ponder.rose_quartz_lamp.header": "玫瑰石英灯",
+	"create.ponder.rose_quartz_lamp.text_1": "玫瑰石英灯通入红石信号后会处于激活状态",
+	"create.ponder.rose_quartz_lamp.text_2": "它们之后会继续产生红石信号",
+	"create.ponder.rose_quartz_lamp.text_3": "当多盏灯排成一组时……",
+	"create.ponder.rose_quartz_lamp.text_4": "……激活一盏灯会集中信号给它，并取消激活其他所有的灯",
+	"create.ponder.rose_quartz_lamp.text_5": "比较器根据到激活的灯的距离产生输出",
+	"create.ponder.rose_quartz_lamp.text_6": "灯也可以用扳手手动开关",
 
 	"create.ponder.rotation_speed_controller.header": "使用转速控制器",
 	"create.ponder.rotation_speed_controller.text_1": "转速控制器将旋转力从其转轴传递至它上方的大齿轮",
