中文翻译：思索——蒸汽引擎、蒸汽笛、显示板、显示链接器
Co-authored-by: MatterStream <Mtstream@users.noreply.github.com>
Co-authored-by: 604853511@qq.com <604853511@qq.com>
Co-authored-by: baka-gourd <baka-gourd@users.noreply.github.com>
Co-authored-by: MacrousHyucen <MacrousHyucen@users.noreply.github.com>

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -728,10 +728,10 @@
 	"advancement.create.hand_crank_000.desc": "转动手摇曲柄直到耗尽饥饿值§7\n（隐藏进度）",
 	"advancement.create.belt_funnel_kiss": "鹦鹉和垂翼",
 	"advancement.create.belt_funnel_kiss.desc": "让两个安装在传送带上的漏斗深情相吻",
-	"advancement.create.stressometer_maxed": "UNLOCALIZED: Perfectly Stressed",
+	"advancement.create.stressometer_maxed": "完美消耗",
 	"advancement.create.stressometer_maxed.desc": "在应力表中得到100%的读数§7\n（隐藏进度）",
-	"advancement.create.copper": "UNLOCALIZED: More Sturdier Rocks",
-	"advancement.create.copper.desc": "UNLOCALIZED: Amass some Copper for your exploits in Fluid Manipulation",
+	"advancement.create.copper": "UNLOCALIZED: More Sturdier Rocks（更硬的岩石？）",
+	"advancement.create.copper.desc": "为你的流体操控技术积累一点铜",
 	"advancement.create.copper_casing": "铜器时代",
 	"advancement.create.copper_casing.desc": "使用铜和木头制作一个铜机壳",
 	"advancement.create.spout": "哗啦啦",
@@ -742,7 +742,7 @@
 	"advancement.create.steam_engine.desc": "UNLOCALIZED: 用蒸汽引擎产生动力（原文是torque，扭矩？）",
 	"advancement.create.steam_whistle": "天籁之音",
 	"advancement.create.steam_whistle.desc": "激活一个蒸汽笛",
-	"advancement.create.backtank": "UNLOCALIZED: Pressure to Go",
+	"advancement.create.backtank": "负重前行",
 	"advancement.create.backtank.desc": "制作一个铜制背罐并对其积累气压",
 	"advancement.create.diving_suit": "准备深潜",
 	"advancement.create.diving_suit.desc": "装备潜水头盔和铜制背罐，然后跳进水里",
@@ -815,7 +815,7 @@
 	"advancement.create.fist_bump": "来碰个拳，哥们~",
 	"advancement.create.fist_bump.desc": "使两个机械手互相碰拳",
 	"advancement.create.crafter_lazy_000": "权宜之计",
-	"advancement.create.crafter_lazy_000.desc": "UNLOCALIZED: 大幅度减慢动力合成器来延迟基本建设Drastically slow down a Mechanical Crafter to procrastinate on proper infrastructure§7\n(Hidden Advancement)",
+	"advancement.create.crafter_lazy_000.desc": "UNLOCALIZED: Drastically slow down a Mechanical Crafter to procrastinate on proper infrastructure§7\n(Hidden Advancement)（大幅度减慢动力合成器来延迟基本建设？）",
 	"advancement.create.extendo_grip_dual": "UNLOCALIZED: To full Extent",
 	"advancement.create.extendo_grip_dual.desc": "用双重伸缩机械手获得超人般的触及距离§7\n（隐藏进度）",
 	"advancement.create.musical_arm": "没人能在我的 BGM 里打败我！",
@@ -1713,14 +1713,14 @@
 	"create.flap_display.cycles.instant": "UNLOCALIZED:  ; ",
 	"create.flap_display.cycles.pixel": "UNLOCALIZED: █;▓;▒",
 
-	"create.super_glue.too_far": "UNLOCALIZED: Selected area is too big",
-	"create.super_glue.cannot_reach": "UNLOCALIZED: Selected blocks must be connected",
-	"create.super_glue.click_to_confirm": "UNLOCALIZED: Click again to confirm",
-	"create.super_glue.click_to_discard": "UNLOCALIZED: Sneak-click to discard selection",
-	"create.super_glue.first_pos": "UNLOCALIZED: First position selected",
-	"create.super_glue.abort": "UNLOCALIZED: Selection discarded",
-	"create.super_glue.not_enough": "UNLOCALIZED: Not enough glue in inventory",
-	"create.super_glue.sucess": "UNLOCALIZED: Applying Glue...",
+	"create.super_glue.too_far": "选择范围过大",
+	"create.super_glue.cannot_reach": "选择的方块必须是相连的",
+	"create.super_glue.click_to_confirm": "再次点击以确认",
+	"create.super_glue.click_to_discard": "潜行点击以取消选择",
+	"create.super_glue.first_pos": "已选择第一坐标",
+	"create.super_glue.abort": "选择已取消",
+	"create.super_glue.not_enough": "物品栏内强力胶不足",
+	"create.super_glue.sucess": "正在上胶……",
 
 	"create.gui.config.overlay1": "Hi :)",
 	"create.gui.config.overlay2": "这是一个叠加层例子",
@@ -2340,28 +2340,28 @@
 	"create.ponder.depot.text_3": "与传送带一样，它也可以将其内的物品转送到其他设备中进行加工……",
 	"create.ponder.depot.text_4": "……同时物品也可以被机械手存取",
 
-	"create.ponder.display_board.header": "UNLOCALIZED: Using Display Boards",
-	"create.ponder.display_board.text_1": "UNLOCALIZED: Display Boards are a scalable alternative to the sign",
-	"create.ponder.display_board.text_2": "UNLOCALIZED: They require Rotational Force to operate",
-	"create.ponder.display_board.text_3": "UNLOCALIZED: Text can be displayed using Name Tags...",
-	"create.ponder.display_board.text_4": "UNLOCALIZED: ...or through the use of Display Links",
-	"create.ponder.display_board.text_5": "UNLOCALIZED: Dyes can be applied to individual lines of the board",
-	"create.ponder.display_board.text_6": "UNLOCALIZED: Lines can be reset by clicking them with an empty hand",
+	"create.ponder.display_board.header": "使用显示板",
+	"create.ponder.display_board.text_1": "显示板是告示牌的可扩展替代品",
+	"create.ponder.display_board.text_2": "它们需要动力以运作",
+	"create.ponder.display_board.text_3": "可以对其使用命名牌来显示文字……",
+	"create.ponder.display_board.text_4": "……或通过使用显示链接器",
+	"create.ponder.display_board.text_5": "可以使用染料来改变单行的颜色",
+	"create.ponder.display_board.text_6": "可以通过空手点击来重置单行内容",
 
-	"create.ponder.display_link.header": "UNLOCALIZED: Setting up Display Links",
-	"create.ponder.display_link.text_1": "UNLOCALIZED: Display Links can be used to visualise dynamic information",
-	"create.ponder.display_link.text_2": "UNLOCALIZED: First, right-click the target display...",
-	"create.ponder.display_link.text_3": "UNLOCALIZED: ...then attach it to the block to read from",
-	"create.ponder.display_link.text_4": "UNLOCALIZED: Open the Interface to select and configure what is sent",
-	"create.ponder.display_link.text_5": "UNLOCALIZED: The display will now receive information from the link",
-	"create.ponder.display_link.text_6": "UNLOCALIZED: Not every block can act as a source",
-	"create.ponder.display_link.text_7": "UNLOCALIZED: Each compatible block provides unique information",
-	"create.ponder.display_link.text_8": "UNLOCALIZED: The Display Link can work with several different displays",
+	"create.ponder.display_link.header": "配置显示链接器",
+	"create.ponder.display_link.text_1": "显示链接器可用于可视化动态信息",
+	"create.ponder.display_link.text_2": "首先，右击目标显示器……",
+	"create.ponder.display_link.text_3": "……然后将其连接到要读取的方块上",
+	"create.ponder.display_link.text_4": "打开界面选择和配置发送的内容",
+	"create.ponder.display_link.text_5": "显示器现在将从链接器接收信息",
+	"create.ponder.display_link.text_6": "不是所有方块都可以作为信息源",
+	"create.ponder.display_link.text_7": "每个兼容的方块都提供了独特的信息",
+	"create.ponder.display_link.text_8": "显示链接器可以用于多个不同的显示器",
 
-	"create.ponder.display_link_redstone.header": "UNLOCALIZED: Redstone Control",
-	"create.ponder.display_link_redstone.text_1": "UNLOCALIZED: When powered by Redstone, Display Links stop sending updates",
-	"create.ponder.display_link_redstone.text_2": "UNLOCALIZED: Once unpowered, the Timer is reset and new info is sent immediately",
-	"create.ponder.display_link_redstone.text_3": "UNLOCALIZED: Signals emitted from the source do not affect the Link",
+	"create.ponder.display_link_redstone.header": "红石控制",
+	"create.ponder.display_link_redstone.text_1": "通入红石信号时，显示链接器停止发送新信息",
+	"create.ponder.display_link_redstone.text_2": "一旦红石信号断开，计时器就会重置，并立即发送新信息",
+	"create.ponder.display_link_redstone.text_3": "信息源方块发出的红石信号不会影响链接器",
 
 	"create.ponder.empty_blaze_burner.header": "使用空的烈焰人燃烧室",
 	"create.ponder.empty_blaze_burner.text_1": "手持空的烈焰人燃烧室右击烈焰人来抓取烈焰人",
@@ -2838,28 +2838,28 @@
 	"create.ponder.stabilized_bearings.text_3": "跟默认的一样，动力轴承会黏着它前方的方块",
 	"create.ponder.stabilized_bearings.text_4": "这种情况下，它所黏着的子装置的垂直朝向也不会改变",
 
-	"create.ponder.steam_engine.header": "UNLOCALIZED: Setting up Steam Engines",
-	"create.ponder.steam_engine.text_1": "UNLOCALIZED: Steam Engines can be placed on a Fluid Tank",
-	"create.ponder.steam_engine.text_10": "UNLOCALIZED: Lvl 4",
-	"create.ponder.steam_engine.text_11": "UNLOCALIZED: 4 Engines",
-	"create.ponder.steam_engine.text_12": "UNLOCALIZED: Lvl 8",
-	"create.ponder.steam_engine.text_13": "UNLOCALIZED: 8 Engines",
-	"create.ponder.steam_engine.text_2": "UNLOCALIZED: Clicking the engine with a Shaft creates the Kinetic Output",
-	"create.ponder.steam_engine.text_3": "UNLOCALIZED: With sufficient Heat, Water and Boiler space...",
-	"create.ponder.steam_engine.text_4": "UNLOCALIZED: ...they will generate Rotational Force",
-	"create.ponder.steam_engine.text_5": "UNLOCALIZED: The minimal setup requires 4 Fluid Tanks",
-	"create.ponder.steam_engine.text_6": "UNLOCALIZED: With the help of Blaze Burners, the power output can be increased",
-	"create.ponder.steam_engine.text_7": "UNLOCALIZED: Higher power levels require more Water, Size and Heat",
-	"create.ponder.steam_engine.text_8": "UNLOCALIZED: The boiler's current power level can be inspected with Engineer's Goggles",
-	"create.ponder.steam_engine.text_9": "UNLOCALIZED: With each added power level, an additional Engine can output at full capacity",
+	"create.ponder.steam_engine.header": "安装蒸汽引擎",
+	"create.ponder.steam_engine.text_1": "蒸汽引擎可以放置在流体储罐上",
+	"create.ponder.steam_engine.text_10": "等级4",
+	"create.ponder.steam_engine.text_11": "4个引擎",
+	"create.ponder.steam_engine.text_12": "等级8",
+	"create.ponder.steam_engine.text_13": "8个引擎",
+	"create.ponder.steam_engine.text_2": "手持传动杆点击引擎创建动力输出",
+	"create.ponder.steam_engine.text_3": "有充足的热量、水和锅炉空间……",
+	"create.ponder.steam_engine.text_4": "……它们就会产生旋转力",
+	"create.ponder.steam_engine.text_5": "最低配置需要4个流体储罐",
+	"create.ponder.steam_engine.text_6": "在烈焰人燃烧室的帮助下，可以增加输出功率",
+	"create.ponder.steam_engine.text_7": "更高的功率等级需要更多水、空间和热量",
+	"create.ponder.steam_engine.text_8": "可以用工程师护目镜检查当前锅炉的功率等级",
+	"create.ponder.steam_engine.text_9": "每提升一个功率等级，额外添加一个引擎即可达到满负荷输出",
 
-	"create.ponder.steam_whistle.header": "UNLOCALIZED: Setting up Steam Whistles",
-	"create.ponder.steam_whistle.text_1": "UNLOCALIZED: Steam Whistles can be placed on a Fluid Tank",
-	"create.ponder.steam_whistle.text_2": "UNLOCALIZED: If the tank receives sufficient heat...",
-	"create.ponder.steam_whistle.text_3": "UNLOCALIZED: ...the Whistle will play a note when activated",
-	"create.ponder.steam_whistle.text_4": "UNLOCALIZED: Use a Whistle item on the block to lower its pitch",
-	"create.ponder.steam_whistle.text_5": "UNLOCALIZED: Cycle between three different octaves using a Wrench",
-	"create.ponder.steam_whistle.text_6": "UNLOCALIZED: Engineer's Goggles can help to find out the current pitch of a Whistle",
+	"create.ponder.steam_whistle.header": "安装蒸汽笛",
+	"create.ponder.steam_whistle.text_1": "蒸汽笛能够被放置在流体储罐上",
+	"create.ponder.steam_whistle.text_2": "当流体储罐受到足够的加热……",
+	"create.ponder.steam_whistle.text_3": "……当蒸汽笛被红石激活时会播放音符",
+	"create.ponder.steam_whistle.text_4": "对蒸汽笛使用蒸汽笛物品来降低它的音调",
+	"create.ponder.steam_whistle.text_5": "使用扳手来在三个八度之间切换",
+	"create.ponder.steam_whistle.text_6": "工程师护目镜能够帮你查看蒸汽笛的音调",
 
 	"create.ponder.sticker.header": "使用黏着器来黏附方块",
 	"create.ponder.sticker.text_1": "你可以用红石信号来控制黏着器的行为",
